<resources>
    <string name="app_name">Mydemo</string>
    <string name="leimu">类目</string>
    <string name="shouye">首页</string>
    <string name="me">我的</string>
    <string name="gouwuche">购物车</string>
    <string name="wode">我的</string>
    <string name="zuixin">最新上架</string>
    <string name="youhui">优惠活动</string>
    <string name="yitao">易淘</string>
    <string name="lbl_fav">我的收藏</string>
    <string name="lbl_logout">退出登录</string>
    <string name="lbl_my_fans">我的粉丝</string>
    <string name="lbl_my_attention">我的关注</string>
    <string name="empty_string">null</string>
    <string name="lbl_my_weibo">我的微博</string>
    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载数据</string>
    <string name="accessibility_description">启动抢红包服务（使用QQ，微信）</string>
</resources>
