<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:scrollbars="vertical" >

    <RelativeLayout
            android:id="@+id/relative_biaoti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/hongse"
            android:padding="@dimen/activity_home_padding"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="我的"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_home_yitao"/>
    </RelativeLayout>
    <ScrollView
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/relative_biaoti"
            android:scrollbars="vertical" >
    <LinearLayout
            android:layout_marginTop="@dimen/space_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_lineframe_bottom_selector"
                android:orientation="horizontal">

            <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/ivHeader"
                    android:layout_width="@dimen/avatar_size_l"
                    android:layout_height="@dimen/avatar_size_l"
                    android:layout_margin="@dimen/space_s"
                    android:src="@mipmap/ic_launcher"/>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tvUserName"
                        style="@style/tv_m_black_sl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space_s"
                        android:text="@string/empty_string"/>

                <TextView
                        android:id="@+id/tvAuth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/space_s"
                        android:text="@string/empty_string"/>
            </LinearLayout>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/space_s"
                    android:layout_marginRight="@dimen/space_s"
                    android:src="@mipmap/ic_arrow_right"/>
        </LinearLayout>


        <TextView
                android:id="@+id/tvWeiBoCount"
                style="@style/tv_m_black_sl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:background="@drawable/bg_lineframe_bottom_selector"
                android:padding="@dimen/space_m"
                android:text="@string/lbl_my_weibo"/>

        <TextView
                android:id="@+id/tvAttentionCount"
                style="@style/tv_m_black_sl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_lineframe_bottom_selector"
                android:padding="@dimen/space_m"
                android:text="@string/lbl_my_attention"/>

        <TextView
                android:id="@+id/tvFansCount"
                style="@style/tv_m_black_sl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_lineframe_bottom_selector"
                android:padding="@dimen/space_m"
                android:text="@string/lbl_my_fans"/>

        <TextView
                android:id="@+id/tvFav"
                style="@style/tv_m_black_sl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_lineframe_bottom_selector"
                android:padding="@dimen/space_m"
                android:text="@string/lbl_fav"/>

        <TextView
                android:id="@+id/tvLoginOut"
                style="@style/tv_m_black_sl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:background="@drawable/bg_lineframe_selector"
                android:gravity="center"
                android:padding="@dimen/space_m"
                android:text="@string/lbl_logout"
                android:textColor="@color/cw_red"
                android:onClick="toLogin"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>